--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,70 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+:root {
+	--font-family: 'Poppins', 'Roboto', sans-serif;
+
+	--aside-width: 16.5625rem;
+	--aside-min-width: 5rem;
+	--aside-height: 100%;
+	--aside-bg-color: #22232e;
+	--sidebar-text-color: #f4f7fa;
+	--sidebar-close-btn-color: #f4f7fa;
+	--sidebar-nav-item-color-hover: #b1d77b;
+	--sidebar-nav-item-color-active: #adec55;
+
+	--content-bg-color: #f4f7fa;
+
+	--background-color-1: #d0d1d2;
+	--background-color-2: #878788;
+	--background-linear: linear-gradient(var(--background-color-1), var(--background-color-2));
+
+	--footer-height: 0px;
+	--main-height: calc(100vh - var(--footer-height));
+
+	--primary-color: #f5f5f5;
+	--grey: #f5f5f5;
+	--dark-grey: #333;
+}
+
+* {
+	margin: 0;
+	padding: 0;
+	outline: none;
+  box-sizing: border-box;
+
+  font-size: .9rem;
+  // color-scheme: light dark;
+
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+
+  scroll-behavior: smooth;
+
+  ::-webkit-scrollbar {
+		width: 10px;
+    background: #35344d;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #212030ec;
+    border-radius: 8px;
+    border: #333;
+  }
+}
+
+body {
+	overflow: hidden;
+	position: relative;
+	font-family: var(--font-family);
+	background: var(--content-bg-color)
+}
+
+// a {
+// 	text-decoration: none;
+// }
+
+// li {
+// 	list-style: none;
+// }
