feat: view animation, lazy loading, page 404

--- a/src/app/pages/wellcome/wellcome.component.html
+++ b/src/app/pages/wellcome/wellcome.component.html
@@ -47,6 +47,12 @@
         </defs>
       </svg>
       <h1>Hello, {{ title }}</h1>
+			<h2>Hello, {{ title }}</h2>
+			<h3>Hello, {{ title }}</h3>
+			<h4>Hello, {{ title }}</h4>
+			<h5>Hello, {{ title }}</h5>
+			<h6>Hello, {{ title }}</h6>
+
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
