--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
 :root {
-	--font-family: 'Poppins', 'Roboto', sans-serif;
-
 	--aside-width: 16.5625rem;
 	--aside-min-width: 5rem;
 	--aside-height: 100%;
@@ -30,41 +28,77 @@
 	margin: 0;
 	padding: 0;
 	outline: none;
-  box-sizing: border-box;
+	box-sizing: border-box;
+	// color-scheme: light dark;
 
-  font-size: .9rem;
-  // color-scheme: light dark;
+	font-size: .9rem;
+	font-family: Poppins, Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+		"Segoe UI Symbol";
 
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 
-  scroll-behavior: smooth;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	-webkit-text-size-adjust: 100%;
 
-  ::-webkit-scrollbar {
+	scroll-behavior: smooth;
+
+	::-webkit-scrollbar {
 		width: 10px;
-    background: #35344d;
-  }
+		background: #35344d;
+	}
 
-  ::-webkit-scrollbar-thumb {
-    background: #212030ec;
-    border-radius: 8px;
-    border: #333;
-  }
+	::-webkit-scrollbar-thumb {
+		background: #212030ec;
+		border-radius: 8px;
+		border: #333;
+	}
 }
 
 body {
 	overflow: hidden;
 	position: relative;
-	font-family: var(--font-family);
 	background: var(--content-bg-color)
 }
 
-// a {
-// 	text-decoration: none;
-// }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-weight: 600;
+}
 
-// li {
-// 	list-style: none;
-// }
+h1 {
+	font-size: 2rem;
+}
+
+h2 {
+	font-size: 1.5rem;
+}
+
+h3 {
+	font-size: 1.25rem;
+}
+
+h4 {
+	font-size: 1rem;
+}
+
+h5 {
+	font-size: .875rem;
+}
+
+h6 {
+	font-size: .75rem;
+}
+
+a {
+	text-decoration: none;
+}
+
+li {
+	list-style: none;
+}
